Enhancement: Balloon remove

--- a/templates/index.html
+++ b/templates/index.html
@@ -472,7 +472,7 @@
 
   <div class="container">
     <div class="header">
-      <h1>🧠Roh's ELI5 - Explain Like I'm 5! 🎈</h1>
+      <h1>🧠Roh's ELI5 - Explain Like I'm 5!</h1>
       <div class="controls">
         <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
         <button class="history-toggle" onclick="toggleHistory()">📚</button>
