--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,7 @@ h1 {
   font-size: 2.2rem;
   background: linear-gradient(90deg, #ff7eb3, #ff758c, #ff7eb3);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 800;
   margin-bottom: 1.5rem;
